# server/app/Http/Controllers/Api/TasksController.php
@@ -118,7 +118,7 @@ class TasksController extends Controller implements ITasks
      *     )
      * )
      */
-    public function Task_Delete($id) {
+    public function Task_Delete(int $id) {
         try {
             $delete_task = Task::whereId($id)->delete();
 
@@ -130,5 +130,42 @@ class TasksController extends Controller implements ITasks
                 "message" => "თასქი ვერ წაიშალა"
             ], 422);
         }
+    }
+
+    /**
+     * @param int<id>
+     * @method GET
+     * @return json
+     * 
+     * @OA\Get(
+     *     path="/api/task/by_status/{id}",
+     *     security={{"bearerAuth":{}}},
+     *     tags={"თასქების API"},
+     *     summary="თასქის წამოღების მარშუტი სტატუსის აიდის მიხედვით",
+     * 
+     *     @OA\Response(
+     *         description="OK",
+     *         response=200
+     *     ),
+     * 
+     *     @OA\Response(
+     *         description="Unprocessable content",
+     *         response=422
+     *     ),
+     * 
+     *     @OA\Parameter(
+     *         name="id",
+     *         description="სტატუსის აიდი",
+     *         required=true,
+     *         in="path",
+     *         
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     )
+     * )
+     */
+    public function Task_By_Status(int $status_id) {
+        return Status::where("status_id", $status_id)->get();
     }
 }
