# server/storage/api-docs/api-docs.json
@@ -267,6 +267,39 @@
                 ]
             }
         },
+        "/api/task/by_status/{id}": {
+            "get": {
+                "tags": [
+                    "თასქების API"
+                ],
+                "summary": "თასქის წამოღების მარშუტი სტატუსის აიდის მიხედვით",
+                "operationId": "c4bd24be55714d29ce612df0e4ce3a2c",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "სტატუსის აიდი",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Unprocessable content"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/user/insert": {
             "post": {
                 "tags": [
